--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -7,20 +7,36 @@ on:
     branches: ["main"]
 
 jobs:
+  Scan:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Detect secrets
+        run: "echo 'detecting secrets not specified"
+
   build:
     runs-on: ubuntu-latest
+    needs: Scan
 
     strategy:
       matrix:
-        node-version: [20.x, 22.x]
+        node-version: [20.x]
 
     steps:
-      - uses: actions/checkout@v4
-      - name: Use Node.js ${{ matrix.node-version }}
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js environment ${{ matrix.node-version }}
         uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
           cache: "npm"
-      - run: npm ci
-      - run: npm run build --if-present
-      - run: npm test
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Build project
+        run: npm run build --if-present
+
+      - name: Run tests
+        run: npm test
