--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -53,6 +53,7 @@ jobs:
         env:
           VITE_LAMBDA_CHAT_URL: ${{ secrets.LAMBDA_CHAT_URL }}
           VITE_LAMBDA_CONTACT_URL: ${{ secrets.LAMBDA_CONTACT_URL }}
+          VITE_SITE_KEY: ${{ secrets.SITE_KEY }}
 
       - name: Run tests
         run: npm test
